Tasky Lab 2 - Exercises done

--- a/tasky/src/App.css
+++ b/tasky/src/App.css
@@ -64,7 +64,7 @@ button {
 }
 
 input[type=text], input[type=date] {
-  width: 60%;
+  width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
@@ -74,7 +74,7 @@ input[type=text], input[type=date] {
 }
 
 input[type=submit] {
-  width: 60%;
+  width: 100%;
   background-color: #4CAF50;
   color: white;
   padding: 14px 20px;
@@ -92,4 +92,10 @@ form {
   text-align: left;
   width: 50%;
   margin: auto;
+}
+
+.priority {
+  border-radius: 5px;
+
+  
 }
